--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -19,8 +19,9 @@
   padding:20px;
 }
 
-.bigLine{
-  height: 10px;
-  border-bottom: 4px solid #2196F3;
-  margin: 50px;
+.main {
+  background-color: #007769;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
