--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,22 +1,13 @@
-.thisishome{
-  text-align:center;
-
-  font-size:50px;
-
-  color:#2196F3;
-}
-
 .description{
+
   text-align:center;
 
-  font-size:20px;
+  font-size:30px;
+  padding-top:80%;
 }
 
 .description span{
-  background-color: #2196F3;
-
   color:white;
-  padding:20px;
 }
 
 .main {
