--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -11,8 +11,12 @@
 }
 
 .main {
-  background-image: url('../photos/bg.jpg');
   display: flex;
   flex-direction: column;
   height: 100vh;
+}
+
+#bg {
+  max-width:100%;
+  max-height:100%;
 }
