--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,6 +2,9 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-image: url("../photos/plane.jpg");
+  min-height:100%;
+  min-width:100%;
 }
 
 .text-grey {
